--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <body>
             <p>
                 This is my first web page.
+                <img src="http://i.stack.imgur.com/SBv4T.gif" alt="this slowpoke moves"  width=250/>
             </p>
         </body>
  
