--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 
             </p>
             <img src="http://i.stack.imgur.com/SBv4T.gif" alt="this slowpoke moves"  width=250/>
+            <img src="n.gif" alt="madara"  width=250/>
         </body>
  
 </html>
